just optional idea

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <label class="control-label" style="display:none" for="email">Please fill in your email.</label>
               <input class="span12" type="email" name="email" id="email" title="Your email" placeholder="Your email"></input>
 </div>
-              <textarea id="idea" name="idea" rows="8" class="span12" title="Your idea" placeholder="Write your idea here...                                                                                                                                                                       For example, I want to do a project with arduino that raise an alarm when somebody is farting. We know, this is not very original, but we are sure that you can improve it!"></textarea>
+              <textarea id="idea" name="idea" rows="8" class="span12" title="Your idea" placeholder="Write your idea here (optional)"></textarea>
               <div class="controls">
                 <div class="span7"></div>
                 <button id="send-idea" type="submit" class="span5 btn btn-primary">Join!</button>
