--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             <h2 id="time" class="time"></h2>
             <p>Let's get together and build something!</p>
           </div>
+	  <a id="form"></a>
           <div class="span4">
 
 
@@ -157,15 +158,15 @@
             <li>The source will be released under the <a href="http://www.gnu.org/licenses/gpl-2.0.html">GPL-2.0</a>.</li>
             <li>The product must be online and usable at the end of the event.</li>
           </ul>
-          <p>We need <strong>you</strong> to pitch us your idea for a project that can be finished in one weekend.</p>
-          <p>Please <a href="mailto:oscar.vilaplana@paylogic.eu">send it to us</a>, and tell us this:<p>
+          <p>We need <strong>you</strong> to pitch us your idea for a Python project that can be finished in one weekend.</p>
+          <p>Please <a href="#form">send it to us</a>, and tell us this:<p>
           <ul>
             <li>What is it?</li>
             <li>What is it for?</li>
-            <li>What features does it have? Write the User Stories</li>
+            <li>What features does it have? List the features and describe them.</li>
             <li>How will we organize ourselves? What features can be developed in parallel?</li>
           </ul>
-          <p>The final date to send us your ideas is Sunday, November 11th. This gives us at least 6 days to help you clarify it.</p>
+          <p>The <strong>final date</strong> to send us your ideas is <strong>Sunday, November 11th</strong>. This gives us at least 6 days to review it and help you get it ready.</p>
         </div>
         <div class="span" style="width:30px;"></div>
         <div class="span5">
@@ -179,13 +180,13 @@
             <tr>
               <td>
                 <ol>
-                  <li>All pitchers get 3 minutes to explain their idea.</li>
+                  <li>10h: Each pitcher gets 3 minutes to explain their idea.</li>
                   <li>First voting.</li>
-                  <li>The pitchers of the 3 best ideas get 15 minutes to explain their idea in more detail.&nbsp;</li>
+                  <li>The pitchers of the 3 most voted ideas get 15 minutes to explain them in more detail.</li>
                   <li>Second voting.</li>
                   <li>We make task forces and divide the work</li>
                   <li>We hack!</li>
-                  <li>End of the day: First demo.</li>
+                  <li>19h: First demo.</li>
                 </ol>
               </td>
             </tr>
@@ -197,9 +198,8 @@
             <tr>
               <td>
                 <ol>
-                  <li>Everyone continues work.</li>
-                  <li>Afternoon: Final demo.</li>
-                  <li>We give some publicity to what we built: Hackernews, Python mailing lists, Reddit. Heck, we could even issue a press release.</li>
+                  <li>10h: We continue hacking!</li>
+                  <li>18h: Final demo.</li>
                   <li>Beer!</li>
                 </ol>
               </td>
