clarified the text

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                   <li>10h: Each pitcher gets 3 minutes to explain their idea.</li>
                   <li>First voting.</li>
                   <li>The pitchers of the 3 most voted ideas get 15 minutes to explain them in more detail.</li>
-                  <li>Second voting.</li>
+                  <li>Second voting. The most voted idea is chosen!</li>
                   <li>We make task forces and divide the work</li>
                   <li>We hack!</li>
                   <li>19h: First demo.</li>
