--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
           <div class="nav-header"><h1>Rules</h1></div>
           <ul>
             <li>We get together one weekend and build something (and finish it!).</li>
+	    <li>We will use git, and we will push our work to the Winter Hackaton github repository.</li>
             <li>The source will be released under the <a href="http://www.gnu.org/licenses/gpl-2.0.html">GPL-2.0</a>.</li>
             <li>The product must be online and usable at the end of the event.</li>
           </ul>
