--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <div class="nav-header"><h1>Rules</h1></div>
           <ul>
             <li>We get together one weekend and build something (and finish it!).</li>
-	    <li>We will use git, and we will push our work to the Winter Hackaton github repository.</li>
+	    <li>We will use git, and we will push our work to the Winter&nbsp;Hackaton github repository.</li>
             <li>The source will be released under the <a href="http://www.gnu.org/licenses/gpl-2.0.html">GPL-2.0</a>.</li>
             <li>The product must be online and usable at the end of the event.</li>
           </ul>
@@ -167,7 +167,7 @@
             <li>What features does it have? List the features and describe them.</li>
             <li>How will we organize ourselves? What features can be developed in parallel?</li>
           </ul>
-          <p>The <strong>final date</strong> to send us your ideas is <strong>Sunday, November 11th</strong>. This gives us at least 6 days to review it and help you get it ready.</p>
+          <p>The <strong>final date</strong> to send us your ideas is <strong>Sunday,&nbsp;November&nbsp;11th</strong>. This gives us at least 6 days to review it and help you get it ready.</p>
         </div>
         <div class="span" style="width:30px;"></div>
         <div class="span5">
