--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <ul>
             <li>What is it?</li>
             <li>What is it for?</li>
-            <li>What features does it have? List the features and describe them.</li>
+            <li>What features does it have? List them and describe them.</li>
             <li>How will we organize ourselves? What features can be developed in parallel?</li>
           </ul>
           <p>The <strong>final date</strong> to send us your ideas is <strong>Sunday,&nbsp;November&nbsp;11th</strong>. This gives us at least 6 days to review it and help you get it ready.</p>
