--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <div id="success" class="span12">
                   <div class="alert alert-success">
-                    Thank you! We received your idea and we'll be in contact.
+                    Thank you! We'll be in contact.
                   </div>
                 </div>
 
