Progress bar from default to warning (match with button)

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="row-fluid">
           <div class="span8">
             <h1 style="font-size:54px;">Pygrunn Winter Hackathon</h1>
-            <div id="days-left" class="progress">
+            <div id="days-left" class="progress progress-warning">
               <div class="bar" style="width: 0%;"></div>
             </div>
             <h2 id="time" class="time"></h2>
