--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
               <div class="bar" style="width: 0%;"></div>
             </div>
             <h2 id="time" class="time"></h2>
+	    <h3 class="muted">Last day to send your ideas: Sunday, November 11th</h3>
           </div>
 	  <a id="form"></a>
           <div class="span4">
