--- a/index.html
+++ b/index.html
@@ -114,12 +114,13 @@
         <div class="row-fluid">
           <div class="span8">
             <h1 style="font-size:54px;"><span class="green">Py</span><span class="red">Grunn</span> Winter Hackathon</h1>
-	    <p style="height:50px">&nbsp</p>
+	    <p style="height:40px">&nbsp</p>
+            <h2 id="time" class="otime"></h2>
+
             <div id="days-left" class="progress progress-warning">
               <div class="bar" style="width: 0%;"></div>
             </div>
-            <h2 id="time" class="time"></h2>
-	    <h3 class="muted">Last day to send your ideas: Sunday, November 11th</h3>
+	    <h3><span style="color: #bbb">Last day to send your ideas:</span> <span style="color: #777">Sunday, November 11th</span></h3>
           </div>
 	  <a id="form"></a>
           <div class="span4">
