Added hours to the schedule

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         padding-top: 20px;
         padding-bottom: 20px;
       }
-      p, li {
+      p, li, dd {
         line-height: 1.5em;
         font-size: 1.2em;
       }
@@ -189,15 +189,21 @@
             </tr>
             <tr>
               <td>
-                <ol>
-                  <li>10h: Each pitcher gets 3 minutes to explain their idea.</li>
-                  <li>First voting.</li>
-                  <li>The pitchers of the 3 most voted ideas get 15 minutes to explain them in more detail.</li>
-                  <li>Second voting. The most voted idea is chosen!</li>
-                  <li>We make task forces and divide the work</li>
-                  <li>We hack!</li>
-                  <li>19h: First demo.</li>
-                </ol>
+                <dl>
+                  <dt>10:00</dt>
+                  <dd>Each pitcher gets 3 minutes to explain their idea.</dd>
+                  <dt>10:15</dt>
+                  <dd>First voting.</dd>
+                  <dt>10:30</dt>
+                  <dd>The pitchers of the 3 most voted ideas get 15 minutes to explain them in more detail.</dd>
+                  <dt>11:15</dt>
+                  <dd>Second voting. The most voted idea is chosen!</dd>
+                  <dt>11:30</dt>
+                  <dd>We make task forces and divide the work.</dd>
+                  <dd>We hack!</dd>
+                  <dt>19:00</dt>
+                  <dd>First demo.</dd>
+                </dl>
               </td>
             </tr>
             <tr>
@@ -207,11 +213,14 @@
             </tr>
             <tr>
               <td>
-                <ol>
-                  <li>10h: We continue hacking!</li>
-                  <li>18h: Final demo.</li>
-                  <li>Beer!</li>
-                </ol>
+                <dl>
+                  <dt>10:00</dt>
+                  <dd>We continue hacking!</dd>
+                  <dt>18:00</dt>
+                  <dd>Final demo.</dd>
+                  <dt>18:30</dt>
+                  <dd>Beer!</dd>
+                </dl>
               </td>
             </tr>
           </table>
