two stupid errors

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="row-fluid">
           <div class="span8">
             <h1 style="font-size:54px;"><span class="green">Py</span><span class="red">Grunn</span> Winter Hackathon</h1>
-	    <p style="height:40px">&nbsp</p>
+	    <p style="height:40px">&nbsp;</p>
             <h2 id="time" class="otime"></h2>
 
             <div id="days-left" class="progress progress-warning">
@@ -224,7 +224,7 @@
 
           <div id="map_canvas" style="z-index:1;position:relative;top:0px;left:0px;width:1024px;height:400px;"></div>
 
-          <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyCffrqUK6zMnIGvM_FTz8yH3n2p4TRmQG0&sensor=false"
+          <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyCffrqUK6zMnIGvM_FTz8yH3n2p4TRmQG0&amp;sensor=false"
             type="text/javascript"></script>
           <script type="text/javascript">
 
