--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
             <form class="form" onsubmit="javascript:return send_idea(this)">
 <div class="control-group">
 <label class="control-label" style="display:none" for="github_username">Please fill in your github username.</label>
-              <input class="span12" type="text" name="github_username" id="github_username" title="Your github profile" placeholder="Your github username"></input>
+              <input class="span12" type="text" name="github_username" id="github_username" title="Your github profile" placeholder="Your github username"/>
 </div>
 <div class="control-group">
 <label class="control-label" style="display:none" for="email">Please fill in your email.</label>
-              <input class="span12" type="email" name="email" id="email" title="Your email" placeholder="Your email"></input>
+              <input class="span12" type="email" name="email" id="email" title="Your email" placeholder="Your email"/>
 </div>
               <textarea id="idea" name="idea" rows="8" class="span12" title="Your idea" placeholder="Write your idea here (optional)"></textarea>
               <div class="controls">
