removed flaskalchemy idea, it's too small, as already discussed

--- a/index.html
+++ b/index.html
@@ -184,18 +184,6 @@
             </div>
             <div class="accordion-group">
               <div class="accordion-heading">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#ideas" href="#idea3">
-                  Remove flask dependencies from flasksqlalchemy
-                </a>
-              </div>
-              <div id="idea3" class="accordion-body collapse">
-                <div class="accordion-inner">
-                  <p>Fork flaskalchemy and remove flask branding. introduce a common way to share sqlalchemy applications, configure the connection/session settings and common declarative base class.</p>
-                </div>
-              </div>
-            </div>
-            <div class="accordion-group">
-              <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#ideas" href="#idea4">
                   Map Reduce with redis
                 </a>
@@ -235,7 +223,7 @@
                     <li>Change the font family text. But the idea is that the text is always trying to be the bigger possible inside this slide.</li>
                   </ul>
 
-                  <p>Python will be used for save your presentations with your user account, all the backoffice & contact APIs (in case that can not be done from JS). Clien side can be done with backbone.</p>
+                  <p>Python will be used for save your presentations with your user account, all the backoffice &amp; contact APIs (in case that can not be done from JS). Clien side can be done with backbone.</p>
                 </div>
               </div>
             </div>
