Added berco idea

--- a/index.html
+++ b/index.html
@@ -244,6 +244,56 @@
                 </div>
               </div>
             </div>
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#ideas" href="#idea8">
+                  ShoveThatStuff or Getridofit
+                </a>
+              </div>
+              <div id="idea8" class="accordion-body collapse">
+                <div class="accordion-inner">
+                  <h3>What is it for?</h3>
+                  <p>Mobile app and backend that make it simple to create an ad for selling/auctioning/giving away stuff and share it with circles on Google+</p>
+
+                  <h3>What features does it have? List them and describe them</h3>
+                  <p>Mobile app:</p>
+                  <ul>
+                    <li>Create a 'sale'</li>
+                    <li>Add title and description</li>
+                    <li>Add photo/video/audio</li>
+                    <li>Add location (GPS/hand entered)</li>
+                    <li>Choose price: free/auction/minimum/fixed</li>
+                    <li>Choose circles that can pickup/bid/buy</li>
+                    <li>Set start/stop sale period</li>
+                    <li>Manage active sales</li>
+                    <li>Manage past sales</li>
+                    <li>Notification of important events</li>
+                  </ul>
+
+                  <p>Optional:</p>
+                  <ul>
+                    <li>Support other media than G+</li>
+                  </ul>
+
+                  <p>Backend:</p>
+                  <ul>
+                    <li>Content transformation</li>
+                    <li>User management</li>
+                  </ul>
+
+                  <h3>How will we organize ourselves? What features can be developed in parallel?</h3>
+                  <p>Teams:</p>
+                  <ul>
+                    <li>Architecture</li>
+                    <li>Frontend</li>
+                    <li>Backend</li>
+                    <li>API connections</li>
+                    <li>Graphic design</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
           </div>
         </span>
       </div>
